Cilium/cilium_gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-gateway

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home-gateway
  namespace: cilium-gateway
  labels:
    app: home-gateway
    env: external
spec:
  gatewayClassName: cilium-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-http-route
  namespace: cilium-gateway
  labels:
    app: home-http-route
    env: external
spec:
  parentRefs:
  - name: home-gateway
    namespace: cilium-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    defaultBackendRef:
      name: stirling-pdf
      namespace: stirling-pdf
      port: 8080
